{
    "name": "MainInputActions",
    "maps": [
        {
            "name": "BasicInput",
            "id": "8cc80c58-f780-45f1-90fc-42c97f34b2dc",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Value",
                    "id": "2dcab357-0c95-4383-a1cd-cc0e6675615a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d8916725-b0d8-4067-8e66-dcabec9e4b0b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}